Fixing table text-alignments

--- a/UI/assets/css/custom.css
+++ b/UI/assets/css/custom.css
@@ -309,6 +309,16 @@ table a:hover {
     text-align: center;
 }
 
+.products-details-table {
+    width: 60%;
+    margin: auto;
+}
+
+.products-details-table th, .products-details-table td {
+    text-align: left;
+    padding-left: 10px;
+}
+
 /* Setings */
 
 /* Change Password */
